cleared .idea/ folder

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,8 @@
 *.bak
 *.dat
 *.dir
-..idea/*.iml
 *.xml
 *.BMP
 *.pyc
-.idea/misc.xml
-.idea/ProgramOne.iml
-GUI/tiles
+.idea/**/*
 TrainingBatches/
